Closed Bug 1269184 Opened 9 years ago Closed 9 years ago

CSS perspective and z-index not layered properly on Firefox 46+, breaking site navigation on ESPN FC and ADS-B Exchange

Categories

(Core :: Layout: Positioned, defect)

46 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox46 + wontfix
firefox47 + fixed
firefox48 + fixed
firefox49 + fixed
firefox-esr38 --- unaffected
firefox-esr45 --- unaffected

People

(Reporter: kohei, Assigned: mattwoodrow)

References

()

Details

(4 keywords)

Attachments

(1 file)

A Firefox 46 site-compat regression posted on Firefox Input: https://input.mozilla.org/en-US/dashboard/response/5899062 STR: 1. Go to http://www.adsbexchange.com/ 2. Click on Global Radar View to open the map 3. Click on the Menu at the top left corner of the map Actual: The menu will not open. <div class="dl-menuwrapper"> is rendered behind the map. Expected: The menu will open. <div class="dl-menuwrapper"> should be visible on top of the map. Good: Firefox 45, 48 DevEdition, 49 Nightly Bad: Firefox 46, 47 Beta
[Tracking Requested - why for this release]: Break a website Regression window (w/ disable e10s & disable APZ): https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=4c9e1d2a80264ba8767b01c31eb75010b03bb076&tochange=90f7eaeca546a96d2c897c5bcc68f84e6885d7c9 Regressed by 2f38c18c7c16 Matt Woodrow — Bug 1230774 - Use correct Z order to sort perspective items. r=roc And I can also reproduce the problem on Aurora48.0a2 and Nightly49.0a1 if disable e10s & disable APZ.
Thank you Alice-san!
Has Regression Range: --- → yes
Has STR: --- → yes
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)
Attachment #8748056 - Flags: review?(mstange)
Attachment #8748056 - Flags: review?(mstange) → review+
Probably too late for 46 so won't fix. But we will track for other branches.
46.0.1 is being planned, right? ADS-B Exchange is a small site, but ESPN FC, reported in Bug 1268590 as well as Firefox Input, is probably a high profile site. If the risk is low (seems so) we should fix it without waiting for 47.
[Tracking Requested - why for this release]: Re-nominating for 46.0.1, see my Comment 6.
Summary: The menu on ADS-B Exchange Global Radar View is not visible on Firefox 46 and 47 → CSS perspective and z-index not layered properly on Firefox 46+, breaking site navigation on ESPN FC and ADS-B Exchange
46.0.1 came out today. I didn't see this till after we built and released. We can keep this open and track it in case we end up doing another point release. For now let's fix this on m-c and uplift as far as it can go!
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Hello Matt, should we consider uplifting this to Beta47 and Aurora48? If yes, please nominate for uplift. Thanks!
Flags: needinfo?(matt.woodrow)
Comment on attachment 8748056 [details] [diff] [review] Create an nsDisplayWrapList for perspective frames so we take their z-index into account Approval Request Comment [Feature/regressing bug #]: Bug 1230774 [User impact if declined]: z-index combined with perspective broken [Describe test coverage new/current, TreeHerder]: Manually tested, reftest added [Risks and why]: Pretty low risk, just changing paint order sorting. [String/UUID change made/needed]: None
Flags: needinfo?(matt.woodrow)
Attachment #8748056 - Flags: approval-mozilla-beta?
Attachment #8748056 - Flags: approval-mozilla-aurora?
Comment on attachment 8748056 [details] [diff] [review] Create an nsDisplayWrapList for perspective frames so we take their z-index into account Recent regression, Aurora48+, Beta47+
Attachment #8748056 - Flags: approval-mozilla-beta?
Attachment #8748056 - Flags: approval-mozilla-beta+
Attachment #8748056 - Flags: approval-mozilla-aurora?
Attachment #8748056 - Flags: approval-mozilla-aurora+
Sorry, have to ask: is a fix coming also for version 46.0.x? This is a pretty big breakage and several other websites are affected as well.
Do you have a list of the affected sites? Looks like http://www.espnfc.us/ has already implemented a workaround for the issue themselves.
Flags: needinfo?(badshah400)
(In reply to Kohei Yoshino [:kohei] from comment #19) > Do you have a list of the affected sites? Sorry, not right away but I will list the problematic sites here as I come across them, > Looks like http://www.espnfc.us/ > has already implemented a workaround for the issue themselves. I don't see where. The site is still completely unusable to me.
Flags: needinfo?(badshah400)
http://www.iplt20.com/match/2016/50 Click on any of the videos in the section "Match Recap". The flash video starts playing but you cannot actually see the video (just a black area instead) as it seems to be playing "under" the area.
The fix is coming in 47, if it hasn't already been addressed by individual sites. Wontfix for 46.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: